slick bug on mobile

--- a/static/css/side-bar.css
+++ b/static/css/side-bar.css
@@ -86,3 +86,10 @@
 .pp-title {
   padding-top: 25px;
 }
+
+@media only screen and (max-width: 750px) {
+.side-bar {
+  margin: 20px auto;
+  width: 95%;
+}
+}
