--- a/static/css/trending-post.css
+++ b/static/css/trending-post.css
@@ -1,6 +1,5 @@
 .trending-posts-wrap {
   width: 95%;
-  margin: 50px auto 30px;
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(2, auto);
@@ -8,6 +7,7 @@
           "tp-hd tp-hd tp-hd"
           "prev-btn tp-slick next-btn";
   overflow: hidden;
+  margin: 0 10px;
 }
 
 .trending-posts-wrap h1 {
@@ -30,7 +30,6 @@
   grid-area: tp-slick;
   height: max-content;
   overflow: hidden;
-  margin: 0 auto;
   display: table !important;
 	table-layout: fixed !important;
 	width: 100% !important;
@@ -45,7 +44,7 @@
 
 .slick-prev-btn,
 .slick-next-btn {
-  margin: auto;
+  margin: auto 0;
   color: rgba(82, 91, 67, 1);
   cursor: pointer;
 }
@@ -58,7 +57,7 @@
 
 .trending-post {
   display: inline-block;
-  height: 450px;
+  height: 400px;
   margin: 0 10px;
   overflow: hidden;
   background-color: white;
@@ -68,20 +67,19 @@
 
 .tp-thumbnail {
   width: 100%;
-  height: 300px;
+  height: 270px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
 
 .tp-content {
+  height: 126px;
   padding: 0 10px;
   line-height: 1.6;
-  height: 150px;
+  position: relative;
 }
 
 .tp-meta {
   position: absolute;
-  bottom: 20px;
+  bottom: 25px;
 }
-
-
